spacing fixes

--- a/src/components/ContentWithFeaturedImage/contentWithFeaturedImage.scss
+++ b/src/components/ContentWithFeaturedImage/contentWithFeaturedImage.scss
@@ -90,7 +90,7 @@
         border: 2px solid #2d5e43;
         border-radius: 8px;
         padding: 0.5rem;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
       }
 
       @media screen and (min-width: 768px) {
