--- a/src/components/global/Form/form.scss
+++ b/src/components/global/Form/form.scss
@@ -31,7 +31,8 @@
 
   small {
     display: block;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
   }
 
   button {
